# goBall

./: .gitattributes  .gitignore  CMakeLists-downloaded-GCC.txt  CMakeLists-repository-GCC.txt  CMakeLists.txt  CMakeLists.txt.bak  README.md  lv_conf.h  lv_drv_conf.h  main.c
lv_drivers/sdl/: sdl.c  sdl_gpu.c
ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
ui/components/: ui_comp.c  ui_comp.h  ui_comp_ball_count_.c  ui_comp_ball_count_.h  ui_comp_hole_count.c  ui_comp_hole_count.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_player_score.c  ui_comp_player_score.h
ui/fonts/: ui_font_Unitblock_48.c  ui_font_Unitblock_60.c  ui_font_Unitblock_72.c
ui/images/: ui_img_go_ball_100x91_png.c  ui_img_go_ball_200x182_png.c  ui_img_go_ball_225x205_png.c  ui_img_go_ball_250x228_png.c  ui_img_go_ball_300x273_png.c  ui_img_go_ball_350x319_png.c  ui_img_go_ball_390x374_png.c  ui_img_go_ball_450x431_png.c  ui_img_studio_go_ball_logo_100x193_png.c  ui_img_studio_go_ball_logo_150x137_png.c  ui_img_studio_go_ball_logo_200x182_png.c  ui_img_studio_go_ball_logo_225x205_png.c  ui_img_studio_go_ball_logo_300x273_png.c  ui_img_studio_go_ball_logo_350x319_png.c  ui_img_venice_18th_2560x1170_png.c
ui/screens/: ui_HScreen.c  ui_MP1V118HGScreen.c  ui_MP1V118HScorecard.c  ui_MP1V19HGScreen.c  ui_MP1V19HScorecard.c  ui_MP1V1PHSScreen.c  ui_MP2V218HGScreen.c  ui_MP2V218HScorecard.c  ui_MP2V29HGScreen.c  ui_MP2V29HScorecard.c  ui_MP2V2PHSScreen.c  ui_MPPSScreen.c  ui_Q1P18HGScreen.c  ui_Q1P9HGScreen.c  ui_Q1PHSScreen.c  ui_Q2P18HGScreen.c  ui_Q2P9HGScreen.c  ui_Q2PHSScreen.c  ui_Q3P18HGScreen.c  ui_Q3P9HGScreen.c  ui_Q3PHSScreen.c  ui_QPSScreen.c  ui_SP1P18HGScreen.c  ui_SP1P18HScorecard.c  ui_SP1P9HGScreen.c  ui_SP1P9HScorecard.c  ui_SP1PHSScreen.c  ui_SP2P18HGScreen.c  ui_SP2P18HScorecard.c  ui_SP2P9HGScreen.c  ui_SP2P9HScorecard.c  ui_SP2PHSScreen.c  ui_SP3P18HGScreen.c  ui_SP3P18HScorecard.c  ui_SP3P9HGScreen.c  ui_SP3P9HScorecard.c  ui_SP3PHSScreen.c  ui_SP4P18HGScreen.c  ui_SP4P18HScorecard.c  ui_SP4P9HGScreen.c  (+3 more)
utils/: squareline_fullscreen_daemon.sh
utils/autostart/: .fullscreen_toggle.desktop.swp  fullscreen_toggle.desktop  fullscreen_toggle.desktop.save  squareline.desktop
utils/piolib/: CMakeLists.txt
utils/piolib/examples/: CMakeLists.txt  piotest.c  piotest.c Original  piotest.cFourSensorsTwoLeds.7z
utils/test/: 1 Player 9 Hole Final.py  1 Player 9 Hole Final_usingC.c  m  test  test.c  two  twoPlayerFinalScoreCalc.c  twoPlayersNineHoles  twoPlayersNineHoles.c  twoPlayersNineHoleslg.c
utils/test/goBallSounds/: YourProjectName  main.c  play_sound
