SET(SOURCES screens/ui_HScreen.c
    screens/ui_SPPSScreen.c
    screens/ui_MPPSScreen.c
    screens/ui_SP1PHSScreen.c
    screens/ui_SP2PHSScreen.c
    screens/ui_SP3PHSScreen.c
    screens/ui_SP4PHSScreen.c
    screens/ui_SP1P9HGScreen.c
    screens/ui_SP1P9HScorecard.c
    screens/ui_SP2P9HGScreen.c
    screens/ui_SP2P9HScorecard.c
    screens/ui_SP3P9HGScreen.c
    screens/ui_SP3P9HScorecard.c
    screens/ui_SP4P9HGScreen.c
    screens/ui_SP4P9HScorecard.c
    screens/ui_SP1P18HGScreen.c
    screens/ui_SP1P18HScorecard.c
    screens/ui_SP2P18HGScreen.c
    screens/ui_SP2P18HScorecard.c
    screens/ui_SP3P18HGScreen.c
    screens/ui_SP3P18HScorecard.c
    screens/ui_SP4P18HGScreen.c
    screens/ui_SP4P18HScorecard.c
    screens/ui_MP1V1PHSScreen.c
    screens/ui_MP1V19HGScreen.c
    screens/ui_MP1V19HScorecard.c
    screens/ui_MP1V118HGScreen.c
    screens/ui_MP1V118HScorecard.c
    screens/ui_MP2V2PHSScreen.c
    screens/ui_MP2V29HGScreen.c
    screens/ui_MP2V29HScorecard.c
    screens/ui_MP2V218HGScreen.c
    screens/ui_MP2V218HScorecard.c
    screens/ui_QPSScreen.c
    screens/ui_Q1PHSScreen.c
    screens/ui_Q1P9HGScreen.c
    screens/ui_Q1P18HGScreen.c
    screens/ui_Q2PHSScreen.c
    screens/ui_Q2P9HGScreen.c
    screens/ui_Q2P18HGScreen.c
    screens/ui_Q3PHSScreen.c
    screens/ui_Q3P9HGScreen.c
    screens/ui_Q3P18HGScreen.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_venice_18th_2560x720_png.c
    images/ui_img_studio_go_ball_logo_225x205_png.c
    images/ui_img_go_ball_450x431_png.c
    images/ui_img_go_ball_225x205_png.c
    images/ui_img_go_ball_350x319_png.c
    images/ui_img_studio_go_ball_logo_350x319_png.c
    images/ui_img_go_ball_300x273_png.c
    images/ui_img_studio_go_ball_logo_200x182_png.c
    images/ui_img_studio_go_ball_logo_300x273_png.c
    images/ui_img_go_ball_250x228_png.c
    images/ui_img_go_ball_390x374_png.c
    images/ui_img_go_ball_100x91_png.c
    images/ui_img_go_ball_200x182_png.c
    images/ui_img_studio_go_ball_logo_100x193_png.c
    images/ui_img_studio_go_ball_logo_150x137_png.c
    fonts/ui_font_Unitblock_48.c
    fonts/ui_font_Unitblock_60.c
    fonts/ui_font_Unitblock_72.c)

add_library(ui ${SOURCES})
